fix: z-indexes

--- a/src/components/ProductFilter/ProductFilter.module.scss
+++ b/src/components/ProductFilter/ProductFilter.module.scss
@@ -18,7 +18,7 @@
     top: 0;
     left: -500px;
     transition: left 0.3s ease-in-out;
-    z-index: 100;
+    z-index: 99;
   }
 }
 
