--- a/src/components/modals/LoginModal/LoginModal.module.scss
+++ b/src/components/modals/LoginModal/LoginModal.module.scss
@@ -2,7 +2,7 @@
 @use '../../../assets/scss/mixins.scss' as mixins;
 
 .Overlay {
-  position: absolute;
+  position: fixed;
   text-align: center;
   left: 0;
   top: 0;
@@ -10,6 +10,7 @@
   width: 100%;
   background-color: rgba($color: #000000, $alpha: 0.5);
   backdrop-filter: blur(10px);
+  z-index: 1000;
 }
 
 .Content {
@@ -28,6 +29,7 @@
   transition:
     transform 0.3s ease-out,
     opacity 0.3s ease-out;
+  z-index: 1001;
 
   @include mixins.tablet {
     width: 98%;
@@ -66,6 +68,7 @@
   right: 50px;
   top: 30px;
   padding: 30px;
+  z-index: 1002;
 
   svg {
     fill: white;
