--- a/src/components/modals/OrderModal/OrderModal.module.scss
+++ b/src/components/modals/OrderModal/OrderModal.module.scss
@@ -23,6 +23,7 @@
   overflow-y: auto;
   position: relative;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  z-index: 1001;
 }
 
 .closeBtn {
@@ -34,6 +35,7 @@
   font-size: 24px;
   cursor: pointer;
   color: #666;
+  z-index: 1002;
   
   &:hover {
     color: #333;
