--- a/src/components/ui/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/ui/BurgerMenu/BurgerMenu.module.scss
@@ -15,7 +15,7 @@
   border: none;
   cursor: pointer;
   padding: 0;
-  z-index: 102;
+  z-index: 98;
 
   span {
     display: block;
