--- a/src/components/widgets/SearchSuggestions/SearchSuggestions.module.scss
+++ b/src/components/widgets/SearchSuggestions/SearchSuggestions.module.scss
@@ -6,6 +6,7 @@
   padding: 10px 10px;
   background-color: #fff;
   box-shadow: 0 0 5px 1px #00000013;
+  z-index: 40;
 }
 .SearchSuggestionsList li {
   line-height: 2em;
